--- a/rsc/style.css
+++ b/rsc/style.css
@@ -28,7 +28,7 @@ header nav {
 header nav a{
     background-color: var(--georgianGreen);
     color: white;
-    font-size: 1.5rem;
+    font-size: 1rem !important;
     text-decoration: none;
 }
 
@@ -155,6 +155,50 @@ grid-area: change;
 #emissionsMap {
     width: 100%;
     height: 60%;
+}
+
+/* Resources further reading */
+
+#resourcesPage h2 {
+    color: white;
+    background-color: var(--georgianBlue);
+    padding: 0.5rem;
+    font-weight: bold;
+    border-radius: 1rem;
+    text-align: center;
+}
+
+.resource {
+    
+    color: white;
+    background-color: var(--georgianBlue);
+    padding: 0.5rem;
+    font-weight: bold;
+    border-radius: 1rem;
+    margin-bottom: 1em;
+}
+
+.resource-title {
+    font-weight: bold;
+    color: white;
+}
+
+.resource-subtitle {
+    font-style: italic;
+}
+
+.resource .col-lg-3 {
+    vertical-align: middle;
+}
+
+.resource-button {
+    background-color: var(--georgianTeal);
+    color: white;
+    font-weight: bold;
+    border: 0;
+    border-radius: 1rem;
+    padding: 0.25rem;
+    text-decoration: none;
 }
 
 /* Footer */
